[package]
name = "mvccstore"
version = "0.1.0"
authors = ["zhangjinpeng1987 <zhangjinpeng@pingcap.com>"]
edition = "2018"

[dependencies]
rocksdb = { git = "https://github.com/Little-Wallace/rust-rocksdb.git", branch="mvcc_store"}
fxhash = "0.2.1"
indexmap = "1.0.2"
clap = "2.32"

[[bin]]
name = "main"

[lib]
name = "mvccstore"

